# logic

./: LICENSE  Logic.hs  MaudeExample.hs  README.md  bench.sh  logic.cabal
Logic/: CNF.hs  ExampleParser.hs  Formula.hs  Orders.hs  Parse.hs  Pretty.hs  Resolution.hs  Skolem.hs  Types.hs  Unification.hs
